tests/should_fail/table_unknown_field.luma
let t = { a = 1, b = 2 }
-- Unknown field access should be reported at typecheck
let x = t.c
